--- a/abstract.tex
+++ b/abstract.tex
@@ -1,37 +1,10 @@
 \begin{abstract}
 
-This paper will contain:
+This paper aims at explaining how we tackled data-quality challenges at Alkemics, with the use of some machine learning algorithms.
+But rather than solely describing models and algorithms, a strong focus is put on implementation and business added value. 
 
-\begin{itemize}
-	\item Introduction, what does Alkemics do?
-	\item Alkemics data quality challenge
-	\begin{itemize}
-		\item Stakes: why it matters
-		\item Constraints: what are our requirements
-		\item Workflow: how we implemented it
-		\item Monitoring: how to track models performances
-	\end{itemize}
-	\item Focus on prediction process
-	\begin{itemize}
-		\item Natural language processing approaches
-		\begin{itemize}
-			\item How to embed?
-			\item WordToVec
-			\item FastText
-		\end{itemize}
-		\item Multilabel
-		\begin{itemize}
-			\item Major approaches
-			\item Scoring metrics
-			\item Neural network approach
-		\end{itemize}
-		\item Miscellaneous
-		\item FastText fork to support multilabel classification
-		\item Predictions score calibration
-		\item Precision/Recall compromise
-		\item Models boostrap
-	\end{itemize}
-	\item What next?
-\end{itemize}
+
+Confronted with challenges concerning product data quality, Alkemics decided to explore new ways to provide value proposition to its clients.
+
 
 \end{abstract}
