--- a/concl.tex
+++ b/concl.tex
@@ -2,10 +2,9 @@
 \addcontentsline{toc}{chapter}{Conclusion}
 \label{cha:conclusion}
 
-% chapter conclusion (end)
+
+Machine learning hype drives attention mostly to models and algorithms. Yet, this project convinced me that 90\% of a project success depends on pragmatism and implementation.
 
 
 \chapter*{Acknowledgment}
 \addcontentsline{toc}{chapter}{Acknowledgment}
-
-% chapter acknowledgment (end)
