--- a/biblio.bib
+++ b/biblio.bib
@@ -1,14 +1,40 @@
-@Article{VdP04,
-    author    = "V. den Poel, D. and Larivière, B.",
-    title     = "Customer attrition analysis for financial services using proportional hazard models.",
-    year      = "2004",
-    journal   = "European Journal of Operational Research",
-    volume    = "157",
-    pages     =  "169-217"
+
+
+@article{fasttextEnriching,
+  title={Enriching Word Vectors with Subword Information},
+  author={Bojanowski, Piotr and Grave, Edouard and Joulin, Armand and Mikolov, Tomas},
+  journal={arXiv preprint arXiv:1607.04606},
+  year={2016}
 }
 
+@article{fasttextTricks,
+  title={Bag of Tricks for Efficient Text Classification},
+  author={Joulin, Armand and Grave, Edouard and Bojanowski, Piotr and Mikolov, Tomas},
+  journal={arXiv preprint arXiv:1607.01759},
+  year={2016}
+}
+
+@article{MultilabelReview,
+    author = {M-L. Zhang, Z-H Zhou},
+    title = {A review on multi-label learning algorithms},
+    journal = {IEEE},
+    year = {2005},
+    volume = {26},
+    number = {8}
+}
+
+@article{Calibration,
+    author = {A. Niculscu-Mizil, R. Caruana.},
+    title = {Predicting good probabilities with supervised learning},
+    journal = {Proceeding: ICML '05 Proceedings of the 22nd international conference on Machine learning},
+    year = {2005},
+    volume = {22},
+    pages = {625 - 632}
+}
+
+
 % Optional fields: volume/number, series, address, edition, month, note
-@BOOK{HTF09,
+@book{HTF09,
     author = {Hastie, T. and Tibshirani, R. and Friedman, J.},
     title = {The elements of statistical learning, Second Edition},
     publisher = {Springer},
@@ -16,8 +42,11 @@
 }
 
 % Optional fields: author, title, howpublished, month, year, note
-@MISC{skGB,
-    title = {scikit-learn},
-    howpublished = {http://scikit-learn.org/stable/modules/ensemble.html\#gradient-boosting},
-    note = {accessed: 2015-11}
+
+@misc{RulesMLGoogle,
+    author = {M. Zinkevich.},
+    title = {Rules of Machine Learning: Best Practices for ML Engineering},
+    year = {2016},
+    howpublished = {http://martin.zinkevich.org/rules_of_ml/rules_of_ml.pdf},
+    note = {accessed: 2017-12}
 }
