--- a/concl.tex
+++ b/concl.tex
@@ -3,7 +3,11 @@
 \label{cha:conclusion}
 
 
-Machine learning hype drives attention mostly to models and algorithms. Yet, this project convinced me that 90\% of a project success depends on pragmatism and implementation.
+During this project, we transformed a workflow dedicated to one multiclass field, to a much flexible and adaptable workflow.
+
+
+Machine learning hype drives attention mostly to models and algorithms. 
+Yet, this project convinced me that 90\% of a project success depends on pragmatism and implementation.
 
 
 \chapter*{Acknowledgment}
