--- a/p_data_quality.tex
+++ b/p_data_quality.tex
@@ -21,6 +21,12 @@ Ultimately, data is owned and provided by manufacturers, and then shared with re
 
 \subsection{What is data-quality}
 
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.50]{./images/data-quality/data-quality-2.png}
+\caption{Example of data-quality measure.}
+\end{figure}
+
 Data quality can be evaluated through:
 \begin{itemize}
 \item completeness: the product page has sufficient details about the product.
@@ -31,6 +37,11 @@ Data quality can be evaluated through:
 \item accuracy: the provided data is accurate, there is no error.
 \end{itemize}
 
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.45]{./images/data-quality/data-quality.png}
+\caption{Example of a product that doesn't specify required fields.}
+\end{figure}
 
 \subsection{Why it matters}
 
