--- a/rapport.tex
+++ b/rapport.tex
@@ -177,21 +177,14 @@ pdftitle=
 \include{p_data_quality}
 \cleardoublepage
 \include{p_machine_learning}
-%\cleardoublepage
-%\include{part3}
-%\cleardoublepage
-%\include{part4}
-%\cleardoublepage
-%\include{part5}
 \cleardoublepage
 \include{concl}
 \cleardoublepage
 \appendix
 \include{p_logistic_regression_multiclass_multilabel}
+\cleardoublepage
 
-%\cleardoublepage
-
-%\bibliographystyle{plain}
-%\bibliography{biblio}
+\bibliographystyle{plain}
+\bibliography{biblio}
 
 \end{document}
